[package]
name = "near-lake"
version = "0.1.17"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
rust-version = "1.62.1"

[dependencies]
actix = "0.13.0"
anyhow = "1.0.51"
aws-config = "0.6.0"
aws-endpoint = "0.6.0"
aws-sdk-s3 = "0.6.0"
aws-smithy-http = "0.36.0"
clap = { version = "3.1.6", features = ["color", "derive", "env"] }
futures = "0.3.5"
http = "0.2"
humantime = "2.1.0"
itertools = "0.10.0"
openssl-probe = "0.1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.55"
tokio = { version = "1.1", features = ["sync", "time"] }
tokio-stream = { version = "0.1" }
tracing = "0.1.34"
tracing-subscriber = "0.2.4"

near-indexer = { git = "https://github.com/calimero-is-near/nearcore", rev = "fa5d60c4f0c4422298c8e55e3888beba9ccdc7bf" }
near-indexer-primitives = { git = "https://github.com/calimero-is-near/nearcore", rev = "fa5d60c4f0c4422298c8e55e3888beba9ccdc7bf" }
near-client = { git = "https://github.com/calimero-is-near/nearcore", rev = "fa5d60c4f0c4422298c8e55e3888beba9ccdc7bf" }
